k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app
  namespace: murali-ns
spec:
  containers:
    - name: c-1
      image: muralisocial123/netflix-25.v1:latest
      ports:
        - containerPort: 80

=====================

 kubectl get nodes
    3  ls
    4  kubectl get pods
    5  kubectl get ns
    6  kubectl get all -n kube-system
    7  kubectl create ns murali-ns
    8  kubectl get ns
    9  kubectl get all -n murali-ns
   10  vi namespace.yaml
   11  ls
   12  cat namespace.yaml
   13  vi namespace.yaml
   14  ls
   15  kubectl apply -f namespace.yaml
   16  kubectl get ns
   17  vi pod.yaml
   18  cat pod.yaml
   19  ls
   20  kubectl apply -f pod.yaml
   21  kubectl get pods
   22  kubectl get pods -n murali-ns
       1  minikube start --driver=docker
    2  minikube status
    3  kubectl get nodes
    4  vi depoloyment.yaml
    5  ls
    6  kubectl apply -f depoloyment.yaml
    7  kubectl get all
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipl-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: ipl
  template:
    metadata:
      labels:
        app: ipl
    spec:
      containers:
        - name: ipl-app
          image: daviddocker526/ipl:latest
          ports:
            - containerPort: 80
