pv & pvc.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: my-pv
spec:
  capacity:
    storage: 2Gi
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: /mnt/data




================

apiVersion:
kind: PersistentVolumeClaim
metadata:
  name: my-pvc
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi

=========================================

apiVersion:
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: demo
      image: nginx
      volumeMounts:
        - mountPath: "/usr/share/nginx/htm"
          name: storage
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: my-pvc
