service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-service
  namespace: namespace4
spec:
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80  
  type: ClusterIP


  vi service1.yaml
kubectl apply -f service1.yaml 
kubectl get service -n namespace4
